tidying up abstract

--- a/paper.Rmd
+++ b/paper.Rmd
@@ -11,7 +11,7 @@ author:
     author} 
 	email: michael.lawrence@gene.com 
 	
-abstract: "The Bioconductor project provides a host of interoperable data abstractions for analysing high-throughput genomics experiments. Implementing a typical genomic workflow with Bioconductor requires learning the abstractions and understanding them at an integrative level.  This places a large cognitive burden on the user. We have created a grammar of genomic data transformation that operates on single, central Bioconductor data structure, GRanges, which naturally represents genomic intervals and their associated measurements. The grammar defines verbs for performing actions on and between genomic interval data through a simplified, coherent interface to existing Bioconductor infrastructure, resulting in fluent analysis workflows. We have implemented this grammar as an R/Bioconductor package called \\texttt{plyranges}."
+abstract: "The Bioconductor project provides many interoperable data abstractions for analysing high-throughput genomics experiments, however implementing a typical genomic workflow with Bioconductor requires learning these abstractions and understanding them at an integrative level. This places a large cognitive burden on the user. We have created a grammar of genomic data transformation that operates on single, central Bioconductor data structure, GRanges, which naturally represents genomic intervals and their associated measurements. The grammar defines verbs for performing actions on and between genomic interval data through a simplified, coherent interface to existing Bioconductor infrastructure, resulting in fluent analysis workflows. We have implemented this grammar as an R/Bioconductor package called \\texttt{plyranges}."
 	
 keywords: "Bioconductor, Grammar, Genomes, Data Analysis" 
 bibliography: references.bib 
