--- a/paper.Rmd
+++ b/paper.Rmd
@@ -5,14 +5,9 @@ author:
     email: stuart.lee1@monash.edu
   - name: Dianne Cook $^{\ref{monash}}$
     email: di.cook@monash.edu 
-  - name: Michael Lawrence \footnote{Bioinformatics and Computational
-    Biology, Genentech Research and Early Development, South San
-    Francisco, United States of America}\footnote{corresponding
-    author} 
-	email: michael.lawrence@gene.com 
-	
-abstract: "The Bioconductor project provides many interoperable data abstractions for analysing high-throughput genomics experiments, however implementing a typical genomic workflow with Bioconductor requires learning these abstractions and understanding them at an integrative level. This places a large cognitive burden on the user. We have created a grammar of genomic data transformation that operates on single, central Bioconductor data structure, GRanges, which naturally represents genomic intervals and their associated measurements. The grammar defines verbs for performing actions on and between genomic interval data through a simplified, coherent interface to existing Bioconductor infrastructure, resulting in fluent analysis workflows. We have implemented this grammar as an R/Bioconductor package called \\texttt{plyranges}."
-	
+  - name: Michael Lawrence \footnote{Bioinformatics and Computational Biology, Genentech Research and Early Development, South San Francisco, United States of America}\footnote{corresponding author} 
+    email: lawrence.michael@gene.com
+abstract: "The Bioconductor project provides many interoperable data abstractions for analysing high-throughput genomics experiments; however implementing a typical genomic workflow with Bioconductor requires learning these abstractions and understanding them at an integrative level. This places a large cognitive burden on the user, especially for non-programmers. To reduce this burden we have created a grammar of genomic data transformation that operates on a single, central Bioconductor data structure, GRanges, which naturally represents genomic intervals and their associated measurements. The grammar defines verbs for performing actions on and between genomic interval data through a simplified, coherent interface to existing Bioconductor infrastructure, resulting in fluent analysis workflows. We have implemented this grammar as an R/Bioconductor package called \\texttt{plyranges}."
 keywords: "Bioconductor, Grammar, Genomes, Data Analysis" 
 bibliography: references.bib 
 output: 
@@ -667,6 +662,13 @@ implement a grammar for performing genomic arithmetic, aggregation, restriction
 and merging. Our examples show that `plyranges` code is succinct, human
 readable and can take advantage of the interoperability provided by
 the Bioconductor ecosystem and the R language.
+
+We also note that the grammar elements and design principles we have described
+are programming language agnostic and could be easily be implemented in another
+language where genomic information could be represented as a tabular data
+structure. We chose R because it is what we are familiar with and because
+the aforementioned Bioconductor packages have implemented the GRanges data
+structure.
 
 We aim to continue developing the `plyranges` package and to extend it
 for use with more complex data structures, such as the
