--- a/paper.tex
+++ b/paper.tex
@@ -204,21 +204,19 @@
 
     \vskip 8.5pt % \small 
 
-\noindent The Bioconductor project has created many useful data abstractions for
-analysing high-throughput genomics experiments. However, there is a
-cognitive load placed on a user in learning a data abstraction and
-understanding its appropriate use. Throughout a standard workflow, a
-user must navigate and know many of these abstractions to perform an
-genomic analysis task, when a single data abstraction, a GRanges object
-will suffice. The GRanges class naturally represent genomic intervals
-and their associated measurements. By recognising that the GRanges class
-follows `tidy' data principles we have created a grammar of genomic data
-transformation. The grammar defines verbs for performing actions on and
-between genomic interval data. It provides a principled way of
-performing common genomic data analysis tasks through a coherent
-interface to existing Bioconductor infrastructure, resulting in human
-readable analysis workflows. We have implemented this grammar as a
-Bioconductor/R package called \texttt{plyranges}.
+\noindent The Bioconductor project provides many interoperable data abstractions
+for analysing high-throughput genomics experiments; however implementing
+a typical genomic workflow with Bioconductor requires learning these
+abstractions and understanding them at an integrative level. This places
+a large cognitive burden on the user, especially for non-programmers. To
+reduce this burden we have created a grammar of genomic data
+transformation that operates on a single, central Bioconductor data
+structure, GRanges, which naturally represents genomic intervals and
+their associated measurements. The grammar defines verbs for performing
+actions on and between genomic interval data through a simplified,
+coherent interface to existing Bioconductor infrastructure, resulting in
+fluent analysis workflows. We have implemented this grammar as an
+R/Bioconductor package called \texttt{plyranges}.
 
 
 \vskip 8.5pt \noindent \emph{Keywords}: Bioconductor, Grammar, Genomes, Data Analysis \par
@@ -258,7 +256,7 @@ operations, such as range manipulation and overlap-based joins, using
 the vocabulary of genomics. Their implementations either delegate
 computations to a database, or operate over collections of files in
 standard formats like BED. An example of the former is the Genome Query
-Language (GQL) and its distributed implementation GenAp which use an
+Language (GQL) and its distributed implementation GenAp which use a
 SQL-like syntax for fast retrieval of information of unprocessed
 sequencing data \autocites{Kozanitis2014-va}{Kozanitis2016-bm}.
 Similarly, the Genometric Query Language (GMQL) implements a relational
@@ -816,6 +814,13 @@ grammar for performing genomic arithmetic, aggregation, restriction and
 merging. Our examples show that \texttt{plyranges} code is succinct,
 human readable and can take advantage of the interoperability provided
 by the Bioconductor ecosystem and the R language.
+
+We also note that the grammar elements and design principles we have
+described are programming language agnostic and could be easily be
+implemented in another language where genomic information could be
+represented as a tabular data structure. We chose R because it is what
+we are familiar with and because the aforementioned Bioconductor
+packages have implemented the GRanges data structure.
 
 We aim to continue developing the \texttt{plyranges} package and to
 extend it for use with more complex data structures, such as the
