further clarification of joins

--- a/paper.Rmd
+++ b/paper.Rmd
@@ -319,7 +319,7 @@ matching by whether the query is completely _within_ the subject, and
 adding the _directed_ suffix ensures that matching ranges have the
 same direction (strand).
 
-```{r olaps-fig, echo = FALSE, out.width="\\textwidth", fig.cap="Illustration of the three overlap join operators. Each join takes two GRanges objects, \\textit{x} and \\textit{y} as input. A 'Hits' object for the join is computed which consists of two components. The first component contains the indices of the ranges in \\textit{x} that have been overlapped (the rectangles of \\textit{x} that cross the orange lines). The second component consists of the indices of the ranges in \\textit{y} that overlap the ranges in \\textit{x}. In this case a range in \\textit{y} overlaps the ranges in \\textit{x} three times, so the index is repeated three times. Te resulting 'Hits' object is used to modify \\textit{x} by where it was 'hit' by \\textit{y}. This principle of is applied generally in the \\texttt{plyranges} DSL for both overlap and nearest neighbour operations. The join semantics alter what is returned: \\textbf{A}: for an \\textbf{inner} join the \textit{x} ranges that are overlapped by \\textit{y} are returned. \\textbf{B}  For an \\textbf{intersect} join the intersection is taken between the overlapped \\textit{x} ranges and the \\textit{y} ranges. \\textbf{C} For the left join \\textbf{left} join all \\textit{x} ranges are returned regardless of whether they are overlapped by \\textit{y}."}
+```{r olaps-fig, echo = FALSE, out.width="\\textwidth", fig.cap="Illustration of the three overlap join operators. Each join takes two GRanges objects, \\textit{x} and \\textit{y} as input. A 'Hits' object for the join is computed which consists of two components. The first component contains the indices of the ranges in \\textit{x} that have been overlapped (the rectangles of \\textit{x} that cross the orange lines). The second component consists of the indices of the ranges in \\textit{y} that overlap the ranges in \\textit{x}. In this case a range in \\textit{y} overlaps the ranges in \\textit{x} three times, so the index is repeated three times. The resulting 'Hits' object is used to modify \\textit{x} by where it was 'hit' by \\textit{y} and merge all metadata columns from \\textit{x} and \\textit{y} based on the indices contained in the 'Hits' object. This procedure is applied generally in the \\texttt{plyranges} DSL for both overlap and nearest neighbour operations. The join semantics alter what is returned: \\textbf{A}: for an \\textbf{inner} join the \\textit{x} ranges that are overlapped by \\textit{y} are returned. The returned ranges also include the metadata from the \\textit{y] range that overlapped the three \\textit{x} ranges. \\textbf{B} An \\textbf{intersect} join is identical to an inner join except that the intersection is taken between the overlapped \\textit{x} ranges and the \\textit{y} ranges. \\textbf{C} For the left join \\textbf{left} join all \\textit{x} ranges are returned regardless of whether they are overlapped by \\textit{y}. In this case the resulting third range  of the join would have missing values on metadata columns that came from \\textit{y}."}
 knitr::include_graphics("diagrams/olap-fig.png")
 ```
 
