--- a/paper.Rmd
+++ b/paper.Rmd
@@ -307,27 +307,27 @@ expressions.
 \begin{figure}
 \includegraphics[width=\textwidth]{diagrams/olap-fig}
 \caption{Illustration of the three overlap join operators. Each join takes two 
-GRanges objects, \\textit{x} and \\textit{y} as input. A 'Hits' object for the 
+GRanges objects, \textit{x} and \textit{y} as input. A 'Hits' object for the 
 join is computed which consists of two components. The first component contains 
-the indices of the ranges in \\textit{x} that have been overlapped 
-(the rectangles of \\textit{x} that cross the orange lines). The second 
-component consists of the indices of the ranges in \\textit{y} that overlap 
-the ranges in \\textit{x}. In this case a range in \\textit{y} overlaps the 
-ranges in \\textit{x} three times, so the index is repeated three times. The 
-resulting 'Hits' object is used to modify \\textit{x} by where it was 'hit' by
-\\textit{y} and merge all metadata columns from \\textit{x} and \\textit{y} 
+the indices of the ranges in \textit{x} that have been overlapped 
+(the rectangles of \textit{x} that cross the orange lines). The second 
+component consists of the indices of the ranges in \textit{y} that overlap 
+the ranges in \textit{x}. In this case a range in \textit{y} overlaps the 
+ranges in \textit{x} three times, so the index is repeated three times. The 
+resulting 'Hits' object is used to modify \textit{x} by where it was 'hit' by
+\textit{y} and merge all metadata columns from \textit{x} and \textit{y} 
 based on the indices contained in the 'Hits' object. This procedure is applied 
-generally in the \\texttt{plyranges} DSL for both overlap and nearest neighbour
-operations. The join semantics alter what is returned: \\textbf{A}: for an 
-\\textbf{inner} join the \\textit{x} ranges that are overlapped by \\textit{y} 
-are returned. The returned ranges also include the metadata from the \\textit{y}
-range that overlapped the three \\textit{x} ranges. \\textbf{B} An 
-\\textbf{intersect} join is identical to an inner join except that the 
-intersection is taken between the overlapped \\textit{x} ranges and the 
-\\textit{y} ranges. \\textbf{C} For the left join \\textbf{left} join all 
-\\textit{x} ranges are returned regardless of whether they are overlapped by 
-\\textit{y}. In this case the resulting third range  of the join would have 
-missing values on metadata columns that came from \\textit{y}.}
+generally in the \texttt{plyranges} DSL for both overlap and nearest neighbour
+operations. The join semantics alter what is returned: \textbf{A}: for an 
+\textbf{inner} join the \textit{x} ranges that are overlapped by \textit{y} 
+are returned. The returned ranges also include the metadata from the \textit{y}
+range that overlapped the three \textit{x} ranges. \textbf{B} An 
+\textbf{intersect} join is identical to an inner join except that the 
+intersection is taken between the overlapped \textit{x} ranges and the 
+\textit{y} ranges. \\textbf{C} For the left join \textbf{left} join all 
+\textit{x} ranges are returned regardless of whether they are overlapped by 
+\textit{y}. In this case the resulting third range  of the join would have 
+missing values on metadata columns that came from \textit{y}.}
 \label{fig:olaps-fig}
 \end{figure}
 
@@ -358,6 +358,21 @@ the left range. Finally, the overlap _left_ join is akin to left outer
 join in Codd's relational algebra: it performs an overlap inner join
 but also returns all _x_ ranges that are not hit by the _y_ ranges.
 
+\begin{figure}
+\includegraphics[width=\textwidth]{diagrams/code-comparison.pdf}
+\caption{Idiomatic code examples for \texttt{plyranges} (\textbf(A)) and 
+\texttt{GenomicRanges} (\textbf(B)) illustrating an overlap and aggregate 
+operation that returns the same result. 
+In each example, we have two BED files consisting of SNPs that are
+genome-wide association study (GWAS) hits and reference exons. Each code block
+counts for each SNP the number of distinct exons it overlaps. The 
+\texttt(plyranges) code achieves this with an overlap join followed by partitioning
+and aggregation. Strand is ignored by default here. 
+The \texttt(GenomicRanges) code achieves this using the 'Hits' and 'List' 
+classes and their methods.}
+\label{fig:code}
+\end{figure}
+
 ```{r nn-fig, echo = FALSE, out.width = "\\textwidth", fig.cap="Illustration of neighbour finding joins. Each join takes a query and subject range and computes a 'Hits' object. For the \\textbf{nearest} join all query ranges are returned as they are all nearest neighbours of the second subject range. For the \\textbf{follow} join there is only one query range that follows any subject range. Likewise for the \\textbf{precede} join, there is only one query range that precedes a subject range."}
 knitr::include_graphics("diagrams/diagrams-003.png")
 ```
@@ -368,7 +383,7 @@ operations can be performed over partitions formed
 using the *group_by* modifier. Together with our algebra for arithmetic and
 merging, these operations conform to the semantics and syntax of the 
 `dplyr` grammar. Consequently, `plyranges` code is generally more compact
-than the equivalent `GenomicRanges` code (figure \ref{code-fig}).
+than the equivalent `GenomicRanges` code (figure \ref{fig:code}).
 
 ## Developing workflows with `plyranges`
 
